# csvtools

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  run_tests.sh
src/csvtools/: csv_line.hpp  csv_reader.hpp  csv_reader_iterator.hpp
tests/csvtoolstests/: CMakeLists.txt  csv_reader_iterator_test.cpp  csv_reader_iterator_test_deps.hpp  csv_reader_test.cpp  csv_reader_test_deps.hpp  csvtools_deps.hpp  main.cpp  stdafx.h
tests/csvtoolstests/testdata/: large_input_advanced.csv  large_input_simple.csv  simple.csv  simple_with_quoted_fields.csv  utf-8.csv
